# ChangeLog for sys-apps/ack
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/ack/ChangeLog,v 1.5 2009/03/12 21:28:41 tove Exp $

  12 Mar 2009; Torsten Veller <tove@gentoo.org> ack-1.88.ebuild:
  Stable on x86 (#262261)

*ack-1.88 (08 Feb 2009)

  08 Feb 2009; Rajiv Aaron Manglani <rajiv@gentoo.org> +ack-1.88.ebuild:
  version bump.

  06 Sep 2008; Raúl Porcel <armin76@gentoo.org> ack-1.86.ebuild:
  x86 stable wrt #236796

  05 Sep 2008; Santiago M. Mola <coldwind@gentoo.org> ack-1.86.ebuild:
  amd64 stable wrt bug #236796

*ack-1.86 (01 Aug 2008)

  01 Aug 2008; Rajiv Aaron Manglani <rajiv@gentoo.org>:
  new package, ack. from http://petdance.com/ack/ and bug #220645.
  ebuild submitted by René 'Necoro' Neumann <gentoo@necoro.eu>.