@@ -1,6 +1,7 @@
 DIST ack-1.86.tar.gz 90207 RMD160 a4198ad72018ca1fec604be338286b180a8890c6 SHA1 4e38e1ecce83e60fc11a49fb17edd977e512cd42 SHA256 809c95cf9794169f1a30d059d06e207217ca5c5bbcf3b678191cc3dc47afaf14
 DIST ack-1.88.tar.gz 97481 RMD160 5a6762bf1ceb0ab835c403744c4deeae2f305bf2 SHA1 3e257fc29e8cc07231a933887183c7c45ec9406c SHA256 15dbdf368b5d1b0495ef2205fbd99e5c88141d0c21625c693173996fd13bd288
 EBUILD ack-1.86.ebuild 602 RMD160 058628e2dc0b28a3bd53facf30a6d2fad33daf63 SHA1 f8a75697796eb4911b61b1fb2eb408821a1dedfe SHA256 b768838b1a2036aead039c2d0d061f5aa46955f6a6975b13321d5056917057ea
+EBUILD ack-1.88-r1.ebuild 820 RMD160 faf57e0103186c15b353cf84ee590541b71f03cc SHA1 83ba867a2a5c5b46f8ee012ebc06288b4772d10a SHA256 290723a502c76cd3b62b296cdc58001e2edd806ea46fb5637dc1c171dfa9ebb9
 EBUILD ack-1.88.ebuild 792 RMD160 1bd2aed3cfb9f7e69e3428bec5178f134185b3e5 SHA1 c7396fcb33aa745d38dcb5a1700debc12c4b4a6a SHA256 7d8197c628cf614c6e03c8959136959db12d7c1674a0f0cf2a40a421fd80faf0
-MISC ChangeLog 810 RMD160 c46d96128bbeffea10f6e5210a8e6e266960ae5f SHA1 68b3e442f4eeccf34ed496e0ce962bf8ef2710b1 SHA256 64f62d1193b63d33bdd899504c80864df1e9ae56f85ed2da7660da8e548b9d60
+MISC ChangeLog 953 RMD160 c6ac4428deb3dde1368c0145b7d211fa95796c8d SHA1 9fde7e3a8bbe5a39afcc5a74f441449bd149f9a6 SHA256 6d33a7306ef8b6b1a2740f2c5b75d32bfed2d67b2ae25af0fe6729da731c558e
 MISC metadata.xml 257 RMD160 7716423decf8296528ca21eaa830fac2816fa991 SHA1 01e7fba79bf45ff5ed3b3b12d421a7b8c084142b SHA256 9b843be0ba934a7342d5c3a52eb98e022e171baab73193f3dc8f3d86fe23b1ef
