@@ -1,6 +1,11 @@
 # ChangeLog for sys-apps/ack
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/ack/ChangeLog,v 1.5 2009/03/12 21:28:41 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/ack/ChangeLog,v 1.6 2009/03/13 06:39:59 rajiv Exp $
+
+*ack-1.88-r1 (12 Mar 2009)
+
+  12 Mar 2009; Rajiv Aaron Manglani <rajiv@gentoo.org> +ack-1.88-r1.ebuild:
+  new ebuild which enables src test.
 
   12 Mar 2009; Torsten Veller <tove@gentoo.org> ack-1.88.ebuild:
   Stable on x86 (#262261)
